...
                      ),
                    ],
                  ),
                  child: Padding(
                    padding: const EdgeInsets.only(bottom: 13.0),
                    child: CupertinoSlidingSegmentedControl<String>(
                      key: const Key('genderSlider'),
                      backgroundColor: Colors.white10,
                      // Semi-transparent background
                      thumbColor: Colors.white30,
                      // White thumb for better visibility
                      children: {
                        'male': Padding(
...
                        ),
                        'female': Padding(
                          padding: const EdgeInsets.symmetric(
                              vertical: 15.0, horizontal: 10.0),
                          child: Text(
                            'Female',
                            key: const Key('femaleKey'),
                            style: _genderStyle,
                          ),
                        ),
                      },
                      onValueChanged: (value) {
                        setState(() {
...
                            mainAxisSize: MainAxisSize.min,
                            children: [
                              Row(
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
                                  StoryCard(
                                    key: const Key('meandering_card'),
                                    title: 'Meandering',
                                    subtitle: 'Story',
                                    selectedStory: 'meandering',
                                    selectedGender: _selectedGender,
                                  ),
                                  SizedBox(width: 10),
                                  LibraryButton(
                                      key: const Key('meandering_library'),
                                      selectedStory: 'meandering',
                                      selectedGender: _selectedGender
                                  )
                                ],
                              ),
                              SizedBox(height: 20),
...
